--- a/unistramobile/style.css
+++ b/unistramobile/style.css
@@ -1,6 +1,7 @@
 div{
     border-style: solid;
     border-width: 2px;
+	border-radius: 10px;
     /*border-left-width: 1px;
     border-right-width: 1px;*/
     border-color: black;
@@ -8,21 +9,31 @@ div{
 }
 
 #agenda{
-	top: 0;
-	left: 0;
-}
-
-#edt{
-	top: 0;
-	right: 0;
-}
-
-#chat{
-	bottom: 0;
-	left: 0;
+	top: 4px;
+	left: 4px;
 }
 
 #annuaire{
+	top: 4px;
+	right: 4px;
+}
+
+#manger{
+	bottom: 28px;
+	left: 4px;
+}
+
+#chat{
+	bottom: 28px;
+	right: 4px;
+}
+
+footer{
+	border-style: solid;
+	background-color : gray;
+	position: fixed;
 	bottom: 0;
+	left: 0;
 	right: 0;
+	height: 20px;
 }
