--- a/unistramobile/style.css
+++ b/unistramobile/style.css
@@ -1,39 +1,229 @@
+/*AJOUT*/
+
+/* Navigation Menu - Background */
+.navigation {
+  /* critical sizing and position styles */
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+  
+  /* non-critical appearance styles */
+  list-style: none;
+  background: #111;
+}
+
+/* Navigation Menu - List items */
+.nav-item {
+  /* non-critical appearance styles */
+  width: 200px;
+  border-top: 1px solid #111;
+  border-bottom: 1px solid #000;
+}
+
+.nav-item a {
+  /* non-critical appearance styles */
+  display: block;
+  padding: 1em;
+  background: linear-gradient(135deg, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+  color: white;
+  font-size: 1.2em;
+  text-decoration: none;
+  transition: color 0.2s, background 0.5s;
+}
+
+.nav-item a:hover {
+  color: #c74438;
+  background: linear-gradient(135deg, rgba(0,0,0,0) 0%,rgba(75,20,20,0.65) 100%);
+}
+
+/* Site Wrapper - Everything that isn't navigation */
+.site-wrap {
+  /* Critical position and size styles */
+  min-height: 100%;
+  min-width: 100%;
+  background-color: white; /* Needs a background or else the nav will show through */
+  position: relative;
+  top: 0;
+  bottom: 100%;
+  left: 0;
+  z-index: 1;
+  
+  /* non-critical apperance styles */
+  padding: 4em;
+  background-image: linear-gradient(135deg, rgb(254,255,255) 0%,rgb(221,241,249) 35%,rgb(160,216,239) 100%);
+  background-size: 200%;
+}
+
+/* Nav Trigger */
+.nav-trigger {
+  /* critical styles - hide the checkbox input */
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+}
+
+label[for="nav-trigger"] {
+  /* critical positioning styles */
+  position: fixed;
+  left: 15px; top: 15px;
+  z-index: 2;
+  
+  /* non-critical apperance styles */
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' width='30px' height='30px' viewBox='0 0 30 30' enable-background='new 0 0 30 30' xml:space='preserve'><rect width='30' height='6'/><rect y='24' width='30' height='6'/><rect y='12' width='30' height='6'/></svg>");
+  background-size: contain;
+}
+
+/* Make the Magic Happen */
+.nav-trigger + label, .site-wrap {
+  transition: left 0.2s;
+}
+
+.nav-trigger:checked + label {
+  left: 215px;
+}
+
+.nav-trigger:checked ~ .site-wrap {
+  left: 200px;
+  box-shadow: 0 0 5px 5px rgba(0,0,0,0.5);
+}
+
+body {
+	/* Without this, the body has excess horizontal scroll when the menu is open */
+  overflow-x: hidden;
+}
+
+/* Additional non-critical styles */
+
+h1, h3, p {
+  max-width: 600px;
+  margin: 0 auto 1em;
+}
+
+code {
+	padding: 2px;
+	background: #ddd;
+}
+
+/* Micro reset */
+*,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0;}
+html, body { height: 100%; width: 100%; font-family: Helvetica, Arial, sans-serif; }
+
+/*FIN AJOUT*/
+
 div{
+}
+
+/*La barre de menu grise en haut*/
+#menu{
+	/*border-style: solid;*/
+	background-color : gray;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 64px;
+}
+/*
+#leftMenu {
+	background-color : gray;
+	position: fixed;
+	top: 64px;
+	left: 0;
+	bottom: 48px;
+	visibility: collapse;
+}
+
+#leftMenu:hover{
+	visibility: visible;
+	
+}*/
+
+/*Le bouton menu (les trois barres parallèles)*/
+#menuButton{
+    border-style: solid;
+    border-width: 1px;
+	border-radius: 10px;
+    border-color: black;
+	position: fixed;
+	top: 8px;
+	left: 8px;
+}
+
+/*Active = clic enfoncé*//*
+#menuButton:active ~ #leftMenu{
+	visibility: visible;
+	-webkit-transition: all 600ms ease;
+    -moz-transition: all 600ms ease;
+    -ms-transition: all 600ms ease;
+    -o-transition: all 600ms ease;
+    transition: all 600ms ease;
+	left: 90px;
+}*/
+
+/*Le bouton agenda, en haut à gauche*/
+#agenda{
+	visibility: visible;
     border-style: solid;
     border-width: 2px;
 	border-radius: 10px;
-    /*border-left-width: 1px;
-    border-right-width: 1px;*/
+    border-color: black;
+	position: absolute;
+	top: 76px;
+	left: 8px;
+}
+/*
+#agenda:hover{
+	left:90px;
+}
+*/
+/*Le bouton annuaire, en haut à droite*/
+#annuaire{
+    border-style: solid;
+    border-width: 2px;
+	border-radius: 10px;
     border-color: black;
 	position: fixed;
+	top: 76px;
+	right: 8px;
 }
 
-#agenda{
-	top: 4px;
-	left: 4px;
-}
-
-#annuaire{
-	top: 4px;
-	right: 4px;
-}
-
+/*Le bouton RU, en bas à gauche*/
 #manger{
-	bottom: 28px;
-	left: 4px;
+    border-style: solid;
+    border-width: 2px;
+	border-radius: 10px;
+    border-color: black;
+	position: absolute;
+	bottom: 56px;
+	left: 8px;
 }
 
+/*Le bouton chat, en bas à droite*/
 #chat{
-	bottom: 28px;
-	right: 4px;
+    border-style: solid;
+    border-width: 2px;
+	border-radius: 10px;
+    border-color: black;
+	position: fixed;
+	bottom: 56px;
+	right: 8px;
 }
 
-footer{
-	border-style: solid;
+/*La barre de menu grise, en bas*/
+#footMenu{
+	/*border-style: solid;*/
+	vertical-align: center;
 	background-color : gray;
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	height: 20px;
+	height: 48px;
 }
