--- a/unistramobile/style.css
+++ b/unistramobile/style.css
@@ -97,6 +97,7 @@ label[for="nav-trigger"] {
 body {
 	/* Without this, the body has excess horizontal scroll when the menu is open */
   overflow-x: hidden;
+  
 }
 
 /* Additional non-critical styles */
@@ -117,33 +118,20 @@ html, body { height: 100%; width: 100%; font-family: Helvetica, Arial, sans-seri
 
 /*FIN AJOUT*/
 
-div{
-}
-
 /*La barre de menu grise en haut*/
 #menu{
 	/*border-style: solid;*/
-	background-color : gray;
-	position: fixed;
+	text-align: center;
+	vertical-align: middle;
+	background-image: linear-gradient(135deg, rgb(160,160,160) 0%,rgb(220,220,220) 35%,rgb(160,160,160) 100%);
+	/*background-color : gray;*/
+	position: absolute;
+	float: left;
 	top: 0;
 	left: 0;
 	right: 0;
 	height: 64px;
 }
-/*
-#leftMenu {
-	background-color : gray;
-	position: fixed;
-	top: 64px;
-	left: 0;
-	bottom: 48px;
-	visibility: collapse;
-}
-
-#leftMenu:hover{
-	visibility: visible;
-	
-}*/
 
 /*Le bouton menu (les trois barres parallèles)*/
 #menuButton{
@@ -156,19 +144,12 @@ div{
 	left: 8px;
 }
 
-/*Active = clic enfoncé*//*
-#menuButton:active ~ #leftMenu{
-	visibility: visible;
-	-webkit-transition: all 600ms ease;
-    -moz-transition: all 600ms ease;
-    -ms-transition: all 600ms ease;
-    -o-transition: all 600ms ease;
-    transition: all 600ms ease;
-	left: 90px;
-}*/
+#icones{
+	vertical-align: middle;
+}
 
 /*Le bouton agenda, en haut à gauche*/
-#agenda{
+#agenda{/*
 	visibility: visible;
     border-style: solid;
     border-width: 2px;
@@ -176,54 +157,60 @@ div{
     border-color: black;
 	position: absolute;
 	top: 76px;
-	left: 8px;
+	left: 8px;*/
+	float:left;
 }
-/*
-#agenda:hover{
-	left:90px;
-}
-*/
+
 /*Le bouton annuaire, en haut à droite*/
-#annuaire{
+#annuaire{/*
     border-style: solid;
     border-width: 2px;
 	border-radius: 10px;
     border-color: black;
 	position: fixed;
 	top: 76px;
-	right: 8px;
+	right: 8px;*/
+	float:right;
 }
 
 /*Le bouton RU, en bas à gauche*/
-#manger{
+#manger{/*
     border-style: solid;
     border-width: 2px;
 	border-radius: 10px;
     border-color: black;
 	position: absolute;
 	bottom: 56px;
-	left: 8px;
+	left: 8px;*/
+	clear:both;
+	float:left;
 }
 
 /*Le bouton chat, en bas à droite*/
-#chat{
+#chat{/*
     border-style: solid;
     border-width: 2px;
 	border-radius: 10px;
     border-color: black;
 	position: fixed;
 	bottom: 56px;
-	right: 8px;
+	right: 8px;*/
+	float:right;
 }
 
 /*La barre de menu grise, en bas*/
 #footMenu{
 	/*border-style: solid;*/
-	vertical-align: center;
-	background-color : gray;
+	background-image: linear-gradient(135deg, rgb(160,160,160) 0%,rgb(220,220,220) 35%,rgb(160,160,160) 100%);
+	/*background-color : gray;*/
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	height: 48px;
+}
+
+marquee{
+margin-left : 8px;
+margin-right : 8px;
 }
