--- a/unistramobile/style.css
+++ b/unistramobile/style.css
@@ -4,6 +4,11 @@ html{
 
 /*AJOUT*/
 
+.connect-bar{
+	position: relative;
+	top:50%;
+	left:36%;
+}
 
 /* Navigation Menu - Background */
 .navigation {
