--- a/unistramobile/style.css
+++ b/unistramobile/style.css
@@ -2,13 +2,22 @@ html{
 	overflow: auto;
 }
 
+.connect-bar{
+	border: 0px solid;
+	background: lightgray;
+    text-align: center;
+	border-radius: 10px;
+	/*position: absolute;
+	top:45%;
+	/*left:45%;*/
+	width : 200px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 /*AJOUT*/
 
-.connect-bar{
-	position: relative;
-	top:50%;
-	left:36%;
-}
+
 
 /* Navigation Menu - Background */
 .navigation {
