--- a/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
+++ b/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:text="Rechercher"
         android:id="@+id/button_search"
-        android:layout_marginTop="101dp"
-        android:layout_alignParentTop="true"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/weekEditText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -20,13 +20,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="4308"
         android:ems="10"
-        android:id="@+id/nameEditText"
+        android:id="@+id/ressourceEditText"
+        android:layout_marginTop="20dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="36dp" />
+        android:layout_toRightOf="@+id/labelRessource" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,5 +35,63 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="60dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="10"
+        android:ems="10"
+        android:id="@+id/weekEditText"
+        android:layout_marginTop="43dp"
+        android:layout_below="@+id/ressourceEditText"
+        android:layout_alignLeft="@+id/ressourceEditText"
+        android:layout_alignStart="@+id/ressourceEditText" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/result_txt"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/result_txt"
+        android:background="#ffffffff"
+        android:focusable="false">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:id="@+id/reslutTextView" />
+    </ScrollView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ressource :"
+        android:id="@+id/labelRessource"
+        android:layout_alignTop="@+id/ressourceEditText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Semaines :"
+        android:id="@+id/labelSemaines"
+        android:layout_alignTop="@+id/weekEditText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Résultat :"
+        android:id="@+id/labelResultat"
+        android:layout_alignBottom="@+id/result_txt"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
