--- a/UnistraMobile/app/src/main/res/layout/activity_main.xml
+++ b/UnistraMobile/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,26 @@
         android:layout_marginTop="88dp"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/button_calen"
+        android:layout_alignEnd="@+id/button_calen" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calendrier"
+        android:id="@+id/button_calen"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/button_annu" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Map"
+        android:id="@+id/button_map"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
