Calrdoid et Coloration des jours de cours
Caldroid utilisé pour afficher les jours trouvés avec des cours (en
fuchsia). color.xml a dû être ajouté et une librairie se télécharge.

--- a/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
+++ b/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
@@ -107,4 +107,12 @@
         android:background="#0E00FF"
         android:textColor="#ffffff" />
 
+    <fragment
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:name="com.roomorama.caldroid.DateGridFragment"
+        android:id="@+id/calendar1"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
