Ajout attente annuaire

--- a/UnistraMobile/app/src/main/res/layout/activity_annuaire.xml
+++ b/UnistraMobile/app/src/main/res/layout/activity_annuaire.xml
@@ -25,6 +25,39 @@
             android:editable="true"
             android:hint="Nom Prenom" />
 
+        <LinearLayout
+            android:id="@+id/progressbar_view"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal" >
+
+                <ProgressBar
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:text="Chargement de l'annuaire..." />
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#C0C0C0" />
+        </LinearLayout>
+
         <ListView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
