--- a/UnistraMobile/app/src/main/res/layout/list_annuaire_item.xml
+++ b/UnistraMobile/app/src/main/res/layout/list_annuaire_item.xml
@@ -18,7 +18,7 @@
         android:adjustViewBounds="true"
         android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
-        android:background="@drawable/phone325" />
+        android:src="@drawable/phone325" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -27,5 +27,5 @@
         android:id="@+id/image_button_mailer"
         android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
-        android:background="@drawable/mail80" />
+        android:src="@drawable/mail80" />
 </LinearLayout>
