--- a/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
+++ b/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
@@ -1,6 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -14,9 +17,7 @@
         android:id="@+id/button_search"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="#ff0e00ff"
-        android:textColor="#ffffff" />
+        android:layout_alignParentStart="true"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -77,9 +78,7 @@
         android:text="Exporter"
         android:id="@+id/exportButton"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:background="#0E00FF"
-        android:textColor="#ffffff" />
+        android:layout_alignParentRight="true"/>
 
     <fragment
         android:layout_width="wrap_content"
@@ -105,5 +104,27 @@
         android:layout_below="@+id/ressourceEditText"
         android:layout_toRightOf="@+id/labelCalendrier"
         android:spinnerMode="dropdown" />
+
+    <!--com.alamkanak.weekview.WeekView
+        android:id="@+id/weekView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:name="com.roomorama.caldroid.DateGridFragment"
+        android:layout_below="@+id/spinner"
+        android:layout_above="@+id/button_search"
+        android:layout_centerHorizontal="true"
+
+        app:eventTextColor="@android:color/black"
+        app:textSize="12sp"
+        app:hourHeight="60dp"
+        app:headerColumnPadding="8dp"
+        app:headerColumnTextColor="#8f000000"
+        app:headerRowPadding="12dp"
+        app:columnGap="8dp"
+        app:noOfVisibleDays="3"
+        app:headerRowBackgroundColor="#ffefefef"
+        app:dayBackgroundColor="#05000000"
+        app:todayBackgroundColor="#1848adff"
+        app:headerColumnBackground="#ffffffff"/-->
 
 </RelativeLayout>
