Retour en arrière et couleurs mois criardes
Je vais peut-être mettre un compteur de doublons, pour être sûr.
Prochaine étape : visualiser les cours d'une date et proposer de les
enlever.

--- a/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
+++ b/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
@@ -80,13 +80,13 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"/>
 
-    <!--fragment
+    <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:name="com.roomorama.caldroid.DateGridFragment"
         android:id="@+id/calendar1"
         android:layout_below="@+id/spinner"
-        android:layout_centerHorizontal="true" /-->
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -104,28 +104,4 @@
         android:layout_below="@+id/ressourceEditText"
         android:layout_toRightOf="@+id/labelCalendrier"
         android:spinnerMode="dropdown" />
-
-    <com.alamkanak.weekview.WeekView
-        android:id="@+id/weekView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="com.roomorama.caldroid.DateGridFragment"
-        android:layout_below="@+id/spinner"
-        android:layout_above="@+id/button_search"
-        android:layout_centerHorizontal="true"
-
-        app:eventTextColor="@android:color/black"
-        app:textSize="12sp"
-        app:hourHeight="60dp"
-        app:headerColumnPadding="8dp"
-        app:headerColumnTextColor="#8f000000"
-        app:headerRowPadding="12dp"
-        app:columnGap="8dp"
-        app:noOfVisibleDays="3"
-        app:firstDayOfWeek="monday"
-        app:headerRowBackgroundColor="#ffefefef"
-        app:dayBackgroundColor="#05000000"
-        app:todayBackgroundColor="#1848adff"
-        app:headerColumnBackground="#ffffffff"/>
-
 </RelativeLayout>
