--- a/UnistraMobile/app/src/main/res/layout/popup.xml
+++ b/UnistraMobile/app/src/main/res/layout/popup.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@android:color/background_light">
-    <!--LinearLayout
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="1dp"
-        android:background="@android:color/darker_gray">
-        >
-        <LinearLayout
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/titrePopup"
+        android:layout_gravity="center_horizontal" />
+
+    <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_margin="20dp">
-            <TextView
-                android:layout_width="fill_parent"
+            android:layout_margin="1dp">
+
+        <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="It's a PopupWindow" />
-            <Button
-                android:id="@+id/dismiss"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Dismiss" />
+                android:orientation="vertical"
+                android:layout_margin="20dp">
+                <ListView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/listView"
+                    android:textSize="20px" android:paddingTop="10dip" android:paddingBottom="10dip"/>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout-->
-    <fragment
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="com.roomorama.caldroid.DateGridFragment"
-        android:id="@+id/calendar1"/>
+
 </LinearLayout>
