--- a/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
+++ b/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
@@ -1,107 +1,118 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/panneauDeBase"
     tools:context="com.mobile.unistra.unistramobile.CalendrierActivity"
-    android:background="#ffffff">
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rechercher"
-        android:id="@+id/button_search"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:text="4308"
-        android:ems="10"
-        android:id="@+id/ressourceEditText"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/labelRessource"
-        android:layout_toLeftOf="@+id/labelSemaines"
-        android:layout_toStartOf="@+id/labelSemaines" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/result_txt"
-        android:layout_below="@+id/button_search"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="60dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:text="1"
-        android:ems="10"
-        android:id="@+id/weekEditText"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignLeft="@+id/exportButton"
-        android:layout_alignStart="@+id/exportButton" />
+    android:background="#ffffff"
+    android:foreground="@drawable/dim">
 
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ressource :"
-        android:id="@+id/labelRessource"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Semaines :"
-        android:id="@+id/labelSemaines"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/weekEditText"
-        android:layout_toStartOf="@+id/weekEditText" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Exporter"
-        android:id="@+id/exportButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"/>
 
-    <fragment
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="com.roomorama.caldroid.DateGridFragment"
-        android:id="@+id/calendar1"
-        android:layout_below="@+id/spinner"
-        android:layout_centerHorizontal="true" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/labelCalendrier"
-        android:text="Calendrier :"
-        android:layout_below="@+id/ressourceEditText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rechercher"
+            android:id="@+id/button_search"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_below="@+id/ressourceEditText"
-        android:layout_toRightOf="@+id/labelCalendrier"
-        android:spinnerMode="dropdown" />
-</RelativeLayout>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:text="4308"
+            android:ems="10"
+            android:id="@+id/ressourceEditText"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/labelRessource"
+            android:layout_toLeftOf="@+id/labelSemaines"
+            android:layout_toStartOf="@+id/labelSemaines" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/result_txt"
+            android:layout_below="@+id/button_search"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="60dp" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:text="1"
+            android:ems="10"
+            android:id="@+id/weekEditText"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignLeft="@+id/exportButton"
+            android:layout_alignStart="@+id/exportButton" />
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ressource :"
+            android:id="@+id/labelRessource"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Semaines :"
+            android:id="@+id/labelSemaines"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/weekEditText"
+            android:layout_toStartOf="@+id/weekEditText" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Exporter"
+            android:id="@+id/exportButton"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"/>
+
+        <fragment
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:name="com.roomorama.caldroid.DateGridFragment"
+            android:id="@+id/calendar1"
+            android:layout_below="@+id/spinner"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/labelCalendrier"
+            android:text="Calendrier :"
+            android:layout_below="@+id/ressourceEditText"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner"
+            android:layout_below="@+id/ressourceEditText"
+            android:layout_toRightOf="@+id/labelCalendrier"
+            android:spinnerMode="dropdown" />
+    </RelativeLayout>
+</FrameLayout>
