--- a/UnistraMobile/app/src/main/res/layout/popup.xml
+++ b/UnistraMobile/app/src/main/res/layout/popup.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+
     android:orientation="vertical"
     android:background="@android:color/background_light">
 
@@ -24,8 +25,9 @@
                 android:orientation="vertical"
                 android:layout_margin="20dp">
                 <ListView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
                     android:id="@+id/listView"
                     android:textSize="20px" android:paddingTop="10dip" android:paddingBottom="10dip"/>
             </LinearLayout>
