--- a/UnistraMobile/app/src/main/res/layout/popup.xml
+++ b/UnistraMobile/app/src/main/res/layout/popup.xml
@@ -25,11 +25,32 @@
                 android:layout_margin="20dp">
                 <ListView
                     android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:id="@+id/listView"
-                    android:textSize="20px" android:paddingTop="10dip" android:paddingBottom="10dip"/>
+                    android:textSize="20sp" android:paddingTop="10dip" android:paddingBottom="10dip"/>
             </LinearLayout>
         </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:text="Accepter"
+            android:id="@+id/Accepter"
+            android:gravity="left"
+            android:layout_gravity="bottom" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:text="Annuler"
+            android:id="@+id/Annuler"
+            android:gravity="right" />
+    </LinearLayout>
 
 </LinearLayout>
