Correction bug, et des trucs je sais plus quoi
Bug corrigé : j'ai mis le constructeur qui sert à faire la synchro au
lieu du constructeur à chercher le calendrier local. C'est réglé,
maintenant, on ne fait plus systématiquement la synchro involontairement
en lancant le programme.

--- a/UnistraMobile/app/src/main/res/layout-land/activity_calendrier.xml
+++ b/UnistraMobile/app/src/main/res/layout-land/activity_calendrier.xml
@@ -9,7 +9,7 @@
     android:id="@+id/panneauDeBase"
     tools:context="com.mobile.unistra.unistramobile.CalendrierActivity"
     android:background="#ffffff"
-    android:screenOrientation="portrait"
+    android:screenOrientation="landscape"
     android:foreground="@drawable/dim">
 
     <RelativeLayout
