--- a/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
+++ b/UnistraMobile/app/src/main/res/layout/activity_calendrier.xml
@@ -75,7 +75,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Exporter"
+            android:text="Enregistrer"
             android:id="@+id/exportButton"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"/>
